# whiteboard

./: CMakeLists.txt  README.md
code/: CMakeLists.txt
code/Wprogram/: CMakeLists.txt
code/Wprogram/core/: CMakeLists.txt  Circle.h  Command.h  DrawCommand.cpp  DrawCommand.h  EraseCommand.cpp  EraseCommand.h  Stroke.h  Whiteboard.cpp  Whiteboard.h  main.cpp
code/Wprogram/opengl/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h
code/Wprogram/opengl/shaders/: Basic.shader
libraries/: CMakeLists.txt
libraries/glad/: CMakeLists.txt
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
libraries/imgui/: CMakeLists.txt
